// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiDescribedFormGroup is rendered 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup props description is not rendered when it's not provided 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup props fullWidth is rendered 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  fullWidth={true}
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup ouiDescribedFormGroup--fullWidth testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={true}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow ouiFormRow--fullWidth"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup props gutterSize is rendered 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  gutterSize="s"
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="s"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterSmall ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup props props for the flex item containers are passed down 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  descriptionFlexItemProps={
    Object {
      "grow": 2,
    }
  }
  fieldFlexItemProps={
    Object {
      "component": "section",
    }
  }
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem
          grow={2}
        >
          <div
            className="ouiFlexItem ouiFlexItem--flexGrow2"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          component="section"
        >
          <section
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </section>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup props titleSize is rendered 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  title={
    <h3>
      Title
    </h3>
  }
  titleSize="l"
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="l"
            >
              <h3
                className="ouiTitle ouiTitle--large ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--large"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--large"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;

exports[`OuiDescribedFormGroup ties together parts for accessibility 1`] = `
<OuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  title={
    <h3>
      Title
    </h3>
  }
>
  <div
    aria-label="aria-label"
    className="ouiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <OuiFlexGroup
      gutterSize="l"
    >
      <div
        className="ouiFlexGroup ouiFlexGroup--gutterLarge ouiFlexGroup--directionRow ouiFlexGroup--responsive"
      >
        <OuiFlexItem>
          <div
            className="ouiFlexItem"
          >
            <OuiTitle
              className="ouiDescribedFormGroup__title"
              size="xs"
            >
              <h3
                className="ouiTitle ouiTitle--xsmall ouiDescribedFormGroup__title"
              >
                Title
              </h3>
            </OuiTitle>
            <OuiText
              className="ouiDescribedFormGroup__description"
              color="subdued"
              size="s"
            >
              <div
                className="ouiText ouiText--small ouiDescribedFormGroup__description"
              >
                <OuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="ouiTextColor ouiTextColor--subdued"
                  >
                    Test description
                  </div>
                </OuiTextColor>
              </div>
            </OuiText>
          </div>
        </OuiFlexItem>
        <OuiFlexItem
          className="ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="ouiFlexItem ouiDescribedFormGroup__fields ouiDescribedFormGroup__fieldPadding--xsmall"
          >
            <OuiFormRow
              describedByIds={Array []}
              display="row"
              error={
                Array [
                  "Error one",
                  "Error two",
                ]
              }
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              helpText="Help text"
              isInvalid={true}
              label="Label"
              labelType="label"
            >
              <div
                className="ouiFormRow"
                id="generated-id-row"
              >
                <div
                  className="ouiFormRow__labelWrapper"
                >
                  <OuiFormLabel
                    aria-invalid={true}
                    className="ouiFormRow__label"
                    htmlFor="generated-id"
                    isFocused={false}
                    isInvalid={true}
                    type="label"
                  >
                    <label
                      aria-invalid={true}
                      className="ouiFormLabel ouiFormRow__label ouiFormLabel-isInvalid"
                      htmlFor="generated-id"
                    >
                      Label
                    </label>
                  </OuiFormLabel>
                </div>
                <div
                  className="ouiFormRow__fieldWrapper"
                >
                  <input
                    aria-describedby="generated-id-help-0 generated-id-error-0 generated-id-error-1"
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                  <OuiFormErrorText
                    className="ouiFormRow__text"
                    id="generated-id-error-0"
                    key="Error one"
                  >
                    <div
                      aria-live="polite"
                      className="ouiFormErrorText ouiFormRow__text"
                      id="generated-id-error-0"
                    >
                      Error one
                    </div>
                  </OuiFormErrorText>
                  <OuiFormErrorText
                    className="ouiFormRow__text"
                    id="generated-id-error-1"
                    key="Error two"
                  >
                    <div
                      aria-live="polite"
                      className="ouiFormErrorText ouiFormRow__text"
                      id="generated-id-error-1"
                    >
                      Error two
                    </div>
                  </OuiFormErrorText>
                  <OuiFormHelpText
                    className="ouiFormRow__text"
                    id="generated-id-help-0"
                    key="Help text"
                  >
                    <div
                      className="ouiFormHelpText ouiFormRow__text"
                      id="generated-id-help-0"
                    >
                      Help text
                    </div>
                  </OuiFormHelpText>
                </div>
              </div>
            </OuiFormRow>
          </div>
        </OuiFlexItem>
      </div>
    </OuiFlexGroup>
  </div>
</OuiDescribedFormGroup>
`;
